crates/pixi_build_python/src/snapshots/pixi_build_python__tests__c_compilers_create_extra_input_globs.snap
---
source: crates/pixi_build_python/src/main.rs
expression: result
---
Ok(
    [
        "setup.py",
        "setup.cfg",
        "pyproject.toml",
        "requirements*.txt",
        "Pipfile",
        "Pipfile.lock",
        "poetry.lock",
        "tox.ini",
        "**/*.py",
        "**/*.{c,h}",
    ],
)
