crates/pixi_build_python/src/snapshots/pixi_build_python__tests__env_vars_are_set.snap
---
source: crates/pixi_build_python/src/main.rs
expression: generated_recipe.recipe.build.script
---
env:
  foo: bar
content: "[ ... script ... ]"
