crates/pixi_build_python/src/snapshots/pixi_build_python__tests__input_globs_includes_extra_globs.snap
---
source: crates/pixi_build_python/src/main.rs
expression: result
---
Ok(
    [
        "setup.py",
        "setup.cfg",
        "pyproject.toml",
        "requirements*.txt",
        "Pipfile",
        "Pipfile.lock",
        "poetry.lock",
        "tox.ini",
        "**/*.py",
        "custom/*.py",
    ],
)
